rollback to G1 GC